# esm-peft

./: README.md  pyproject.toml
finetune_esm_cafa5/: create_embeddings.py  finetune.py  train.py
finetune_esm_cafa5/dataset/: cafa5.py  utils.py
finetune_esm_cafa5/models/: classifier.py  mlp.py
scripts/: embed_dataset.sh  finetune_esm8M.sh  mmseqs_create_cluster_tsv.sh
src/: finetune.py
src/dataset/: cafa5.py  fasta_dataset.py
