[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
# Empty is fine // https://stackoverflow.com/questions/75526020/dynamically-version-a-pyproject-toml-package-without-importing-runtime-dependenc

[project]
dynamic = ["version"]
name = "finetune_esm_cafa5"

dependencies = [
    "pandas~=2.2.3",
    "datasets~=3.5.0",
    "mlflow~=2.22.0",
    "mlflow-skinny~=2.22.0",
    "numpy~=2.2.5",
    "torch~=2.7.0",
    "transformers~=4.46.3",  # this one is important bc error in newest version
    "peft~=0.15.2",
]

[tool.setuptools.packages.find]
where = ["src"]

requires-python = ">= 3.12"

[project.scripts]
finetune_cafa5 = "src:finetune"
